tooling/nargo_cli/tests/snapshots/execution_success/binary_operator_overloading/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: u32):
    (no terminator instruction)
}
